<resources>
    <string name="app_name">GPSdistance</string>
    <string name="start">Start</string>
    <string name="totalDistance">Total Distance</string>
    <string name="constant_speed">Current Velocity</string>
    <string name="avg_speed">Overall Velocity</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="accuracy_may_vary">*Accuracy may vary*</string>
    <string name="speed_km_h">Velocity (km/h):</string>
    <string name="distance_meters">Distance (meters):</string>
    <string name="speed_is_in_km_h">(Velocity is in km/h)</string>
    <string name="zero">0.00</string>
    <string name="distance_is_in_km">(Distance is in km)</string>
</resources>